force-app/main/default/objects/Vehicle_Service_Request__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores customer details</description>
    <inlineHelpText>Vehicle Customer stores the customer details.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Vehicle_Customer__c</referenceTo>
    <relationshipLabel>Vehicle Service Requests</relationshipLabel>
    <relationshipName>Vehicle_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>