force-app/main/default/objects/Vehicle_Service_Request__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>Date for the vehicle service.</description>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>