force-app/main/default/objects/Vehicle_Service_Request__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores vehicle details</description>
    <inlineHelpText>Vehicle stores the vehicle details.</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipName>Vehicle_Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>